Content Full Filled 1

--- a/templates/about_hcc.html
+++ b/templates/about_hcc.html
@@ -13,11 +13,11 @@
       body {
         font-family: "Poppins", sans-serif;
       }
-      h1{
-        font-weight:600;
+      h1 {
+        font-weight: 600;
         color: black;
       }
-      h1:hover{
+      h1:hover {
         cursor: pointer;
         color: #2f358f;
       }
@@ -95,26 +95,25 @@
       /*Image management CSS ends*/
 
       /*After photo CSS starts*/
-      .sub_titles{
+      .sub_titles {
         font-weight: 700;
         cursor: pointer;
         color: #2f358f;
       }
-      .sub_titles:hover{
+      .sub_titles:hover {
         color: red;
-      } 
-      /*After photo CSS ends*/  
-      .main_img:hover{
+      }
+      /*After photo CSS ends*/
+      .main_img:hover {
         border-radius: 20px;
-        transition-duration: .5s;
+        transition-duration: 0.5s;
         transform: scale(1.1) rotate(0deg);
         box-shadow: 0 32px 75px rgba(68, 77, 136, 0.2);
-        
       }
     </style>
     <div class="gridd_container">
       <div class="sidebar">
-        <a href="/gallary" class="sidebar_a"
+        <a href="/whyhcc" class="sidebar_a"
           >About HCC Why HCCSS Faculty Office Hours Organizational Structure
           Facts And Figures Department Of HCCSS.</a
         >
@@ -126,60 +125,52 @@
         </div>
 
         <p class="long_paragraph">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. At nisi
-          veritatis hic nesciunt eligendi suscipit molestiae porro! Quasi
-          quibusdam, assumenda cum tempora rem dolore. Laborum facilis saepe
-          laboriosam quod quidem fuga quo explicabo ut vel maiores eaque
-          corrupti optio, asperiores repudiandae tenetur quas, natus ratione
-          eveniet neque recusandae. Voluptate distinctio totam ut dolorem amet
-          consequuntur optio quo ex, laborum fugit, unde aliquid. Veniam aperiam
-          tempore molestiae, qui magni necessitatibus deleniti molestias ipsum
-          deserunt quae ipsa reiciendis tempora veritatis unde incidunt.
-          Perspiciatis laboriosam rem nobis sed minima dolor sapiente laudantium
-          quod eum ad amet, ab beatae numquam fuga earum temporibus unde ex
-          fugiat sint eveniet eos, distinctio sunt nesciunt? Nam at eveniet nemo
-          expedita sint voluptate doloremque illum consectetur deleniti, aperiam
-          voluptatibus nulla maiores delectus perspiciatis? Placeat excepturi
-          vero, voluptate numquam fugit necessitatibus molestiae quod
-          consectetur accusantium consequatur optio perferendis, culpa
-          repudiandae inventore dolorum enim eligendi tenetur saepe animi nisi?
-          Explicabo nisi minus placeat veritatis, porro iste. Accusamus minus
-          totam odit quas quasi rem labore assumenda omnis nulla numquam, harum
-          autem ipsum, perferendis necessitatibus voluptate consequatur sint
-          itaque consectetur facilis, molestias sequi? Ipsa sunt expedita
-          molestiae porro nisi ratione, ipsum aliquam harum amet possimus
-          quisquam dolore, rerum id voluptatum ab magni.
-        </p>  
+          Hetauda City College is a prestigious Information Technology college
+          in Nepal. The college is in the heart of Hetauda, which is easily
+          accessible from both the Terai and the hilly regions of Nepal.
+          Currently, the college offers a variety of academic programs,
+          including 10+2 in Science, Management, and Hotel Management faculties,
+          as well as Bachelor programs in Information Technology.
+          <br />
+          <br />
+          The college began modestly, with thirty-three students in the
+          Management stream at the high school level. Today, it has over 1000
+          students studying in over fourteen academic programs each year. The
+          college now has highly experienced faculty, advanced infrastructure,
+          and technological advancements, ensuring that students receive a
+          world-class education.
+          <br />
+          <br />
+          In the Higher Secondary level, we offer courses in Science and
+          Management. A Bachelor of Computer Application is part of our
+          Undergraduate program. Hetauda City College, with the motto "Real Word
+          Problem Solving," is committed to providing quality education for the
+          advancement of society.
+        </p>
 
         <h4 class="sub_titles">Mission</h4>
         <p class="short_paragraph">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At veniam
-          excepturi quaerat repudiandae nulla nisi deserunt aliquam magni id
-          cumque, commodi facere illo dolorem. Voluptate reprehenderit numquam
-          natus! Nobis, aliquam.
+          The purpose of HCC is to offer a platform for experience design
+          thinking so that problems can be turned into opportunities.
         </p>
 
         <h4 class="sub_titles">Vision</h4>
         <p class="short_paragraph">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet
-          voluptas alias id ea. Et consequatur saepe placeat ut, omnis,
-          laboriosam blanditiis, eum ipsam tempora impedit officia eius odit
-          sint dolores.
+          HCC aspires to be Nepal's top institution of higher learning for
+          immersive, innovative, and transformative education in the
+          twenty-first century.
         </p>
 
         <h4 class="sub_titles">Philosophy</h4>
         <p class="short_paragraph">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum
-          ipsa adipisci quia repellendus provident dicta autem, assumenda cum
-          perspiciatis, ratione suscipit porro officiis eveniet doloremque
-          nesciunt perferendis natus, nobis deleniti.
+          Transform the Challenges into Opportunities is the Hetauda City
+          College's (HCC) guiding philosophy.
         </p>
 
         <h4 class="sub_titles">Values</h4>
         <p class="short_paragraph">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, rem
-          doloremque hic eius facere odio, earum et consequuntur inventore,
-          aliquam maxime? Est, non. Neque eius tempora eos ut fugiat iste.
+          Positive discipline, integrity, respect for variety, ongoing
+          improvement, and sustainability are among HCC's core values.
         </p>
       </main>
     </div>
