--- a/templates/base.html
+++ b/templates/base.html
@@ -474,10 +474,10 @@
             <div class="single-box">
               <h2>About</h2>
               <ul>
-                <li><a href="#">Why HCC</a></li>
-                <li><a href="#">Leadership</a></li>
-                <li><a href="#">Location</a></li>
-                <li><a href="#">About HCC</a></li>
+                <li><a href="/whyhcc">Why HCC</a></li>
+                <li><a href="/leadership">Leadership</a></li>
+                <li><a href="/location">Location</a></li>
+                <li><a href="/about_hcc">About HCC</a></li>
                 <!-- <li><a href="#">Email Hosting</a></li>
                     <li><a href="#">VPS Hosting</a></li> -->
               </ul>
@@ -487,12 +487,12 @@
             <div class="single-box">
               <h2>Links</h2>
               <ul>
-                <li><a href="#">Gallary</a></li>
-                <li><a href="#">Our Services</a></li>
-                <li><a href="#">Programs</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Facilities</a></li>
-                <li><a href="#">Home</a></li>
+                <li><a href="/gallary">Gallary</a></li>
+                <li><a href="/extra_services">Our Services</a></li>
+                <li><a href="/bca">BCA</a></li>
+                <li><a href="/contact">Contact Us</a></li>
+                <li><a href="/csit">Bsc.CSIT</a></li>
+                <li><a href="/">Home</a></li>
               </ul>
             </div>
           </div>
