--- a/templates/contact.html
+++ b/templates/contact.html
@@ -187,23 +187,25 @@
     <div class="contact_container">
       <div class="content">
         <div class="left-side">
-          <div class="address details">
-            <i class="fa-solid fa-location-dot"></i>
-            <div class="topic">Address</div>
-            <div class="text-one">Hetauda, Makawanpur</div>
-            <div class="text-two">Hetauda 05</div>
+
+
+          <div class="email details">
+            <i class="fas fa-envelope"></i>
+            <div class="topic">Email</div>
+            <div class="text-one">hetaudacitycollege.official@gmail.com</div>
+            <div class="text-two">test@gmail.com</div>
           </div>
           <div class="phone details">
             <i class="fas fa-phone"></i>
             <div class="topic">Phone</div>
-            <div class="text-one">+977 1234567890</div>
-            <div class="text-two">+0096 0123456789</div>
+            <div class="text-one">057-526660</div>
+            <div class="text-two">+977 9855077417</div>
           </div>
-          <div class="email details">
-            <i class="fas fa-envelope"></i>
-            <div class="topic">Email</div>
-            <div class="text-one">test@gmail.com</div>
-            <div class="text-two">khatra@gmail.com</div>
+          <div class="address details">
+            <i class="fa-solid fa-location-dot"></i>
+            <div class="topic">Address</div>
+            <div class="text-one">Hetauda 05</div>
+            <div class="text-two">Piple</div>
           </div>
         </div>
         <div class="right-side">
