--- a/templates/csit_syllabus.html
+++ b/templates/csit_syllabus.html
@@ -127,7 +127,7 @@
     <div class="gridd_container">
       <!-- <nav class="navv">Navbar</nav> -->
       <div class="sidebar">
-        <a href="/gallary" class="sidebar_a"
+        <a href="/about_hcc" class="sidebar_a"
           >About HCC Why HCCSS Faculty Office Hours Organizational Structure
           Facts And Figures Department Of HCCSS.</a
         >
@@ -139,13 +139,7 @@
         </div>
 
         <p class="long_paragraph">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. At nisi
-          veritatis hic nesciunt eligendi suscipit molestiae porro! Quasi
-          quibusdam, assumenda cum tempora rem dolore. Laborum facilis saepe
-          laboriosam quod quidem fuga quo explicabo ut vel maiores eaque
-          corrupti optio, asperiores repudiandae tenetur quas, natus ratione
-          eveniet neque recusandae. Voluptate distinctio totam ut dolorem amet
-          consequuntur optio quo ex, laborum fugit, unde aliquid. Veniam aperiam
+          BSc.CSIT (Bachelor of Science in Computer Science and Information Technology) is a popular undergraduate program in Nepal that focuses on the study of computer science and information technology. The program typically takes four years to complete and covers a wide range of topics, including programming, data structures, algorithms, computer networks, database management, software engineering, web development and much more.
         </p>
         <h2 class="s_h2">Bsc.CSIT Syllabus</h2>
       </main>
