--- a/templates/gallary.html
+++ b/templates/gallary.html
@@ -76,11 +76,12 @@
             font-size: 20px;
             color: #fff;
             cursor: pointer;
+            border: 2px solid hotpink;
             border-radius: 5px;
         }
         
         .full-img span:hover {
-            box-shadow: 0 0 8px #f44206, 0 0 8px #ef0dc5;
+            box-shadow: 0 0 10px #07ff17, 0 0 10px #ef0dc5;
         }
         
         .progress {
@@ -132,7 +133,7 @@
         <img src="{% static 'college2.jpg' %}" onclick="openfullImg(this.src)">
         <img src="{% static 'college3.jpg' %}" onclick="openfullImg(this.src)">
         <img src="{% static 'lorem_co-ordinator.jpg' %}" onclick="openfullImg(this.src)">
-        <img src="{% static '+2_co-ordinator.jpg' %}" onclick="openfullImg(this.src)">
+        <img src="{% static 'eyecheck.jpg' %}" onclick="openfullImg(this.src)">
         <img src="{% static 'plus2_hm_cook1.jpg' %}" onclick="openfullImg(this.src)">
         <img src="{% static 'csit_football.jpg' %}" onclick="openfullImg(this.src)">
         <img src="{% static 'bcapic1.jpg' %}" onclick="openfullImg(this.src)">
