--- a/templates/leadership.html
+++ b/templates/leadership.html
@@ -13,11 +13,11 @@
       body {
         font-family: "Poppins", sans-serif;
       }
-      h1{
-        font-weight:600;
+      h1 {
+        font-weight: 600;
         color: black;
       }
-      h1:hover{
+      h1:hover {
         cursor: pointer;
         color: #2f358f;
       }
@@ -95,26 +95,25 @@
       /*Image management CSS ends*/
 
       /*After photo CSS starts*/
-      .sub_titles{
+      .sub_titles {
         font-weight: 700;
         cursor: pointer;
         color: #2f358f;
       }
-      .sub_titles:hover{
+      .sub_titles:hover {
         color: red;
       }
       /*After photo CSS ends*/
-      .main_img:hover{
+      .main_img:hover {
         border-radius: 20px;
-        transition-duration: .5s;
+        transition-duration: 0.5s;
         transform: scale(1.1) rotate(0deg);
         box-shadow: 0 32px 75px rgba(68, 77, 136, 0.2);
-        
       }
     </style>
     <div class="gridd_container">
       <div class="sidebar">
-        <a href="/gallary" class="sidebar_a"
+        <a href="/about_hcc" class="sidebar_a"
           >About HCC Why HCCSS Faculty Office Hours Organizational Structure
           Facts And Figures Department Of HCCSS.</a
         >
@@ -126,31 +125,34 @@
         </div>
 
         <p class="long_paragraph">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. At nisi
-          veritatis hic nesciunt eligendi suscipit molestiae porro! Quasi
-          quibusdam, assumenda cum tempora rem dolore. Laborum facilis saepe
-          laboriosam quod quidem fuga quo explicabo ut vel maiores eaque
-          corrupti optio, asperiores repudiandae tenetur quas, natus ratione
-          eveniet neque recusandae. Voluptate distinctio totam ut dolorem amet
-          consequuntur optio quo ex, laborum fugit, unde aliquid. Veniam aperiam
-          tempore molestiae, qui magni necessitatibus deleniti molestias ipsum
-          deserunt quae ipsa reiciendis tempora veritatis unde incidunt.
-          Perspiciatis laboriosam rem nobis sed minima dolor sapiente laudantium
-          quod eum ad amet, ab beatae numquam fuga earum temporibus unde ex
-          fugiat sint eveniet eos, distinctio sunt nesciunt? Nam at eveniet nemo
-          expedita sint voluptate doloremque illum consectetur deleniti, aperiam
-          voluptatibus nulla maiores delectus perspiciatis? Placeat excepturi
-          vero, voluptate numquam fugit necessitatibus molestiae quod
-          consectetur accusantium consequatur optio perferendis, culpa
-          repudiandae inventore dolorum enim eligendi tenetur saepe animi nisi?
-          Explicabo nisi minus placeat veritatis, porro iste. Accusamus minus
-          totam odit quas quasi rem labore assumenda omnis nulla numquam, harum
-          autem ipsum, perferendis necessitatibus voluptate consequatur sint
-          itaque consectetur facilis, molestias sequi? Ipsa sunt expedita
-          molestiae porro nisi ratione, ipsum aliquam harum amet possimus
-          quisquam dolore, rerum id voluptatum ab magni.
+          Leadership in an Information Technology college is crucial to ensuring
+          the success of both students and faculty. Effective leaders in HCC
+          possess a strong understanding of the industry and the ability to
+          inspire and guide students to reach their full potential. One of the
+          key responsibilities of a leader in an HCC is to stay current with the
+          latest developments and trends in the field, and to ensure that the
+          curriculum and resources available to students are up-to-date and
+          relevant.
+          <br />
+          <br />
+          Effective leaders in HCC also understand the importance of fostering a
+          culture of innovation and creativity. They encourage students to think
+          critically and to take risks in order to push the boundaries of what
+          is possible. They also create opportunities for students to
+          collaborate and work on real-world projects, which helps to prepare
+          them for the challenges they will face in their future careers.
+          <br />
+          <br />
+          In addition to fostering a culture of innovation, leaders in HCC also
+          prioritize the development of soft skills such as communication,
+          teamwork, and problem-solving. These skills are essential for success
+          in the modern workforce, and leaders in HCC ensure that
+          students are well-equipped to navigate the complex and
+          rapidly-changing landscape of the technology industry. By focusing on
+          both technical and soft skills, leaders in IT colleges can help to
+          prepare students for long-term success in the field.
         </p>
-      </main>   
+      </main>
     </div>
     <script></script>
     {% endblock %}
