--- a/templates/location.html
+++ b/templates/location.html
@@ -130,7 +130,7 @@
     </style>
     <div class="gridd_container">
       <div class="sidebar">
-        <a href="/gallary" class="sidebar_a"
+        <a href="/about_hcc" class="sidebar_a"
           >About HCC Why HCCSS Faculty Office Hours Organizational Structure
           Facts And Figures Department Of HCCSS.</a
         >
