--- a/templates/ourstaff.html
+++ b/templates/ourstaff.html
@@ -125,8 +125,7 @@
           <h3 class="user-name">Naresh Nath Yogi</h3>
           <h5>Bacelors Co-ordinator</h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum eveniet
-            soluta hic sunt sit reprehenderit.
+            Perfect rules and real world trainings for studends.
           </p>
         </div>
         <div class="profile">
@@ -135,18 +134,16 @@
           <h3 class="user-name">Sumanta Silwal</h3>
           <h5>Marketing Director</h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-            facilis sint quod.
+            As soon as Possible you may realize that you are the future IT officer.
           </p>
         </div>
         <div class="profile">
-          <img src="{% static '+2_co-ordinator.jpg' %}" class="profile-img" />
+          <img src="{% static 'dineshsir.jpg' %}" class="profile-img" />
 
           <h3 class="user-name">Dinesh phuyal</h3>
           <h5>+2 Co-ordinator</h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
-            eveniet!
+            Students and we as a team try to solve those big problems in our community or society.
           </p>
         </div>
       </div>
@@ -154,35 +151,31 @@
       <div class="profiles">
         <div class="profile">
           <img
-            src="{% static 'lorem_co-ordinator.jpg' %}"
+            src="{% static 'priyamam.jpg' %}"
             class="profile-img"
           />
 
-          <h3 class="user-name">Naresh Nath Yogi</h3>
-          <h5>Bacelors Co-ordinator</h5>
+          <h3 class="user-name">Priya Pandey</h3>
+          <h5>Accountant</h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum eveniet
-            soluta hic sunt sit reprehenderit.
+            Empowering and encouraging girls to pursue careers in Information Technology.
+        </div>
+        <div class="profile">
+          <img src="{% static 'md.jpg' %}" class="profile-img" />
+
+          <h3 class="user-name">Falano MD</h3>
+          <h5>Managing Director</h5>
+          <p>
+            We are committed to providing equal opportunities and encouraging diversity in our college.
           </p>
         </div>
         <div class="profile">
-          <img src="{% static 'sumanta.jpg' %}" class="profile-img" />
+          <img src="{% static 'tunandsir.jpg' %}" class="profile-img" />
 
-          <h3 class="user-name">Sumanta Silwal</h3>
-          <h5>Marketing Director</h5>
+          <h3 class="user-name">Kumar Keshari</h3>
+          <h5>Mathematics Professor</h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-            facilis sint quod.
-          </p>
-        </div>
-        <div class="profile">
-          <img src="{% static '+2_co-ordinator.jpg' %}" class="profile-img" />
-
-          <h3 class="user-name">Dinesh phuyal</h3>
-          <h5>+2 Co-ordinator</h5>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
-            eveniet!
+            Mathematics give you smartness in your day to day work and works as a great tool.
           </p>
         </div>
       </div>
@@ -191,35 +184,32 @@
       <div class="profiles">
         <div class="profile">
           <img
-            src="{% static 'lorem_co-ordinator.jpg' %}"
+            src="{% static 'umeshsir.jpg' %}"
             class="profile-img"
           />
 
-          <h3 class="user-name">Naresh Nath Yogi</h3>
-          <h5>Bacelors Co-ordinator</h5>
+          <h3 class="user-name">Umesh Pathak</h3>
+          <h5>Programming Professor</h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum eveniet
-            soluta hic sunt sit reprehenderit.
+            The is more than 75% contribution of softwares in technology as a whole.
           </p>
         </div>
         <div class="profile">
-          <img src="{% static 'sumanta.jpg' %}" class="profile-img" />
+          <img src="{% static 'principal.jpg' %}" class="profile-img" />
 
-          <h3 class="user-name">Sumanta Silwal</h3>
-          <h5>Marketing Director</h5>
+          <h3 class="user-name">Shree Karki</h3>
+          <h5>Principal</h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-            facilis sint quod.
+            Making decisions and working as a better leader in Hetauda City College. 
           </p>
         </div>
         <div class="profile">
-          <img src="{% static '+2_co-ordinator.jpg' %}" class="profile-img" />
+          <img src="{% static 'ranjitsir.jpg' %}" class="profile-img" />
 
-          <h3 class="user-name">Dinesh phuyal</h3>
-          <h5>+2 Co-ordinator</h5>
+          <h3 class="user-name">Ranjit Karki</h3>
+          <h5>English Professor</h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
-            eveniet!
+            Fluent international language breaks language barrier all over the world.
           </p>
         </div>
       </div>
@@ -228,15 +218,14 @@
       <div class="profiles">
         <div class="profile">
           <img
-            src="{% static 'lorem_co-ordinator.jpg' %}"
+            src="{% static 'anjilsir.jpg' %}"
             class="profile-img"
           />
 
-          <h3 class="user-name">Naresh Nath Yogi</h3>
-          <h5>Bacelors Co-ordinator</h5>
+          <h3 class="user-name">Anjil Khadka</h3>
+          <h5>Microprocessor Professor</h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum eveniet
-            soluta hic sunt sit reprehenderit.
+            The software containing device always includes Microprocessor.
           </p>
         </div>
         <div class="profile">
@@ -245,18 +234,16 @@
           <h3 class="user-name">Sumanta Silwal</h3>
           <h5>Marketing Director</h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-            facilis sint quod.
+            As soon as Possible you may realize that you are the future IT officer.
           </p>
         </div>
         <div class="profile">
-          <img src="{% static '+2_co-ordinator.jpg' %}" class="profile-img" />
+          <img src="{% static 'dineshsir.jpg' %}" class="profile-img" />
 
           <h3 class="user-name">Dinesh phuyal</h3>
           <h5>+2 Co-ordinator</h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
-            eveniet!
+            Students and we as a team try to solve those big problems in our community or society.
           </p>
         </div>
       </div>
