--- a/templates/bca.html
+++ b/templates/bca.html
@@ -282,7 +282,7 @@
     </style>
     <div class="gridd_container">
       <div class="sidebar">
-        <a href="/gallary" class="sidebar_a"
+        <a href="/about_hcc" class="sidebar_a"
           >About HCC Why HCCSS Faculty Office Hours Organizational Structure
           Facts And Figures Department Of HCCSS.</a
         >
@@ -301,29 +301,11 @@
         </div>
 
         <p class="long_paragraph">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. At nisi
-          veritatis hic nesciunt eligendi suscipit molestiae porro! Quasi
-          quibusdam, assumenda cum tempora rem dolore. Laborum facilis saepe
-          laboriosam quod quidem fuga quo explicabo ut vel maiores eaque
-          corrupti optio, asperiores repudiandae tenetur quas, natus ratione
-          eveniet neque recusandae. Voluptate distinctio totam ut dolorem amet
-          consequuntur optio quo ex, laborum fugit, unde aliquid. Veniam aperiam
-          tempore molestiae, qui magni necessitatibus deleniti molestias ipsum
-          deserunt quae ipsa reiciendis tempora veritatis unde incidunt.
-          Perspiciatis laboriosam rem nobis sed minima dolor sapiente laudantium
-          quod eum ad amet, ab beatae numquam fuga earum temporibus unde ex
-          fugiat sint eveniet eos, distinctio sunt nesciunt? Nam at eveniet nemo
-          expedita sint voluptate doloremque illum consectetur deleniti, aperiam
-          voluptatibus nulla maiores delectus perspiciatis? Placeat excepturi
-          vero, voluptate numquam fugit necessitatibus molestiae quod
-          consectetur accusantium consequatur optio perferendis, culpa
-          repudiandae inventore dolorum enim eligendi tenetur saepe animi nisi?
-          Explicabo nisi minus placeat veritatis, porro iste. Accusamus minus
-          totam odit quas quasi rem labore assumenda omnis nulla numquam, harum
-          autem ipsum, perferendis necessitatibus voluptate consequatur sint
-          itaque consectetur facilis, molestias sequi? Ipsa sunt expedita
-          molestiae porro nisi ratione, ipsum aliquam harum amet possimus
-          quisquam dolore, rerum id voluptatum ab magni.
+          BCA (Bachelor of Computer Application) is a popular undergraduate program in Nepal that focuses on the study of computer science and applications. The program typically takes four years to complete and covers a wide range of topics, including programming, data structures, algorithms, database management, computer networks, and web development.
+          <br>
+          The curriculum is designed to provide students with a solid foundation in computer science and to prepare them for a variety of careers in the field, such as software development, web design, database management, and IT consulting. Many BCA graduates in Nepal go on to work in software development companies, IT consulting firms, or government organizations.
+          <br>
+          The BCA program is offered by Tribhuvan University, offer the program with a specialization in a particular area such as in software development, web development, and database management. The program is also offered in distance education format which enables working professionals to pursue the degree while working.
         </p>
         <!-- FORM STARTS -->
 
