--- a/templates/csit.html
+++ b/templates/csit.html
@@ -282,7 +282,7 @@
     </style>
     <div class="gridd_container">
       <div class="sidebar">
-        <a href="/gallary" class="sidebar_a"
+        <a href="/about_hcc" class="sidebar_a"
           >About HCC Why HCCSS Faculty Office Hours Organizational Structure
           Facts And Figures Department Of HCCSS.</a
         >
@@ -301,29 +301,9 @@
         </div>
 
         <p class="long_paragraph">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. At nisi
-          veritatis hic nesciunt eligendi suscipit molestiae porro! Quasi
-          quibusdam, assumenda cum tempora rem dolore. Laborum facilis saepe
-          laboriosam quod quidem fuga quo explicabo ut vel maiores eaque
-          corrupti optio, asperiores repudiandae tenetur quas, natus ratione
-          eveniet neque recusandae. Voluptate distinctio totam ut dolorem amet
-          consequuntur optio quo ex, laborum fugit, unde aliquid. Veniam aperiam
-          tempore molestiae, qui magni necessitatibus deleniti molestias ipsum
-          deserunt quae ipsa reiciendis tempora veritatis unde incidunt.
-          Perspiciatis laboriosam rem nobis sed minima dolor sapiente laudantium
-          quod eum ad amet, ab beatae numquam fuga earum temporibus unde ex
-          fugiat sint eveniet eos, distinctio sunt nesciunt? Nam at eveniet nemo
-          expedita sint voluptate doloremque illum consectetur deleniti, aperiam
-          voluptatibus nulla maiores delectus perspiciatis? Placeat excepturi
-          vero, voluptate numquam fugit necessitatibus molestiae quod
-          consectetur accusantium consequatur optio perferendis, culpa
-          repudiandae inventore dolorum enim eligendi tenetur saepe animi nisi?
-          Explicabo nisi minus placeat veritatis, porro iste. Accusamus minus
-          totam odit quas quasi rem labore assumenda omnis nulla numquam, harum
-          autem ipsum, perferendis necessitatibus voluptate consequatur sint
-          itaque consectetur facilis, molestias sequi? Ipsa sunt expedita
-          molestiae porro nisi ratione, ipsum aliquam harum amet possimus
-          quisquam dolore, rerum id voluptatum ab magni.
+          BSc.CSIT (Bachelor of Science in Computer Science and Information Technology) is a popular undergraduate program in Nepal that focuses on the study of computer science and information technology. The program typically takes four years to complete and covers a wide range of topics, including programming, data structures, algorithms, computer networks, database management, software engineering, web development and much more.
+          <br>
+          The curriculum of BSc.CSIT is designed to provide students with a comprehensive understanding of computer science and information technology and to prepare them for a wide range of careers in the field, including software development, web design, database management, IT consulting, network administration and much more. Graduates of BSc.CSIT can go on to work in software development companies, IT consulting firms, government organizations, and other businesses that rely on computer technology.
         </p>
         <!-- FORM STARTS -->
 
