--- a/templates/extra_services.html
+++ b/templates/extra_services.html
@@ -16,7 +16,7 @@
         color: #fff;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr .4fr;
+        grid-template-rows: 1fr 0.4fr;
         grid-template-areas:
           "sidebar main main"
           "content1 content1 content2";
@@ -45,8 +45,8 @@
       }
       @media only screen and (min-width: 768px) {
         .mainn {
-            margin-right: 12rem;
-            color: black;
+          margin-right: 12rem;
+          color: black;
           background: #fff;
           grid-area: main;
         }
@@ -56,7 +56,7 @@
           margin-top: 25px;
           grid-area: sidebar;
         }
-        .content1{
+        .content1 {
           margin: 0px 35px;
         }
       }
@@ -71,23 +71,23 @@
             "content2";
         }
         .mainn {
-            padding: 20px;
-            color: black;
+          padding: 20px;
+          color: black;
           background: #fff;
           grid-area: main;
         }
         .sidebar {
-            margin: 0px 8px 0px;
+          margin: 0px 8px 0px;
           background: #fff;
           grid-area: sidebar;
         }
         .content1 {
-            padding: 8px;
+          padding: 8px;
           background: #fff;
           grid-area: content1;
         }
         .content2 {
-            padding: 8px;
+          padding: 8px;
           background: #fff;
           grid-area: content2;
         }
@@ -108,7 +108,7 @@
       /*Image management CSS ends*/
 
       /*After photo CSS starts*/
-      .long_paragraph{
+      .long_paragraph {
         text-align: justify;
         font-size: 17px;
       }
@@ -122,7 +122,7 @@
       }
       /*After photo CSS ends*/
       /*Points edit starts*/
-      .sidebar dl{
+      .sidebar dl {
         list-style-type: square;
         color: black;
         font-size: 17px;
@@ -139,7 +139,7 @@
         <dl>
           <li>Bus Service</li>
           <li>Regular Health Checkup</li>
-          <li>Medical Service </li>
+          <li>Medical Service</li>
           <li>Sports</li>
           <li>Students Monitoring</li>
           <li>Hostel and Food</li>
@@ -147,7 +147,7 @@
           <li>NO Mobile Phone</li>
           <li>Regular Meeting with Parents</li>
           <li>Value for Money</li>
-          <li>Best Kids Environment </li>
+          <li>Best Kids Environment</li>
           <li>Kids Playground</li>
           <li>Basketball Court</li>
           <li>Big Space Parking</li>
@@ -166,13 +166,25 @@
         </div>
 
         <p class="long_paragraph">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. At nisi
-          veritatis hic nesciunt eligendi suscipit molestiae porro! Quasi
-          quibusdam, assumenda cum tempora rem dolore. Laborum facilis saepe
-          laboriosam quod quidem fuga quo explicabo ut vel maiores eaque
-          corrupti optio, asperiores repudiandae tenetur quas, natus ratione
-          eveniet neque recusandae. Voluptate distinctio totam ut dolorem amet
-          consequuntur optio quo ex, laborum fugit, unde aliquid. Veniam aperiam
+          HCC, as an IT college, offers a wide range of services to support the
+          academic and professional development of its students. These services
+          include comprehensive academic advising, career counseling, and
+          mentoring programs. These services help students to navigate the
+          curriculum, set academic and career goals, and identify the resources
+          that are available to them to achieve those goals.
+          <br />
+          <br />
+          In addition to these core services, HCC also provides students with
+          access to a variety of specialized resources, such as computer labs,
+          software development tools, and other technology resources. These
+          resources are essential for students to gain hands-on experience and
+          develop the technical skills they need to succeed in the field. HCC
+          also provides access to online learning resources, such as video
+          lectures, online tutorials, and interactive learning modules, which
+          enable students to learn at their own pace and on their own schedule.
+          Furthermore, the college also provides internships and research
+          opportunities to students, which give them a chance to apply their
+          knowledge and skills in real-world settings.
         </p>
         <h2 class="s_h2">Extra Cirriculam Activities</h2>
         <div class="main_img_div">
