--- a/templates/index.html
+++ b/templates/index.html
@@ -338,7 +338,7 @@
         <div class="carousel-item active c-item">
           <img src="{% static 'college1.jpg' %}" class="d-block w-100n c-img" alt="...">
           <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-            <p class="mt-5 fs-3 text-uppercase">Our building is amazing</p>
+            <p class="mt-5 fs-3 text-uppercase">Better Environment</p>
             <h1 class="display-1 fw-bolder text-capatalize">Our Building</h1>
           </div>
         </div>
@@ -461,7 +461,7 @@
     <div class="tes_wrapper">
       <div class="box">
         <i class="fas fa-quote-left quote"></i>
-        <p>Hami nai khatra ho hamro nai college khatra ho hamro college jasto ramro education dine college nepal ma katai ni xaina teai bhayera hamro college ma nai paisa kharcha garnus hai ta !</p>
+        <p>Perfect rules and real world trainings for studends helps them to innovate or discover new things. So, we make students to deal with real world problems.</p>
         <div class="content">
           <div class="info">
             <div class="name">Naresh Nath Yogi</div>
@@ -481,7 +481,7 @@
       </div>
       <div class="box">
         <i class="fas fa-quote-left quote"></i>
-        <p>Hami nai khatra ho hamro nai college khatra ho hamro college jasto ramro education dine college nepal ma katai ni xaina teai bhayera hamro college ma nai paisa kharcha garnus hai ta !</p>
+        <p>Although this is modern era, there are many problems in our society. Students and we as a team try to solve those big problems in our community or society.</p>
         <div class="content">
           <div class="info">
             <div class="name">Dinesh Phuyal</div>
@@ -490,12 +490,12 @@
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
-              <i class="far fa-star"></i>
-              <i class="far fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
             </div>
           </div>
           <div class="image">
-            <img src="{% static '+2_co-ordinator.jpg' %}" alt="">
+            <img src="{% static 'dineshsir.jpg' %}" alt="">
           </div>
         </div>
       </div>
