--- a/templates/whyhcc.html
+++ b/templates/whyhcc.html
@@ -13,11 +13,11 @@
       body {
         font-family: "Poppins", sans-serif;
       }
-      h1{
-        font-weight:600;
+      h1 {
+        font-weight: 600;
         color: black;
       }
-      h1:hover{
+      h1:hover {
         cursor: pointer;
         color: #2f358f;
       }
@@ -95,26 +95,29 @@
       /*Image management CSS ends*/
 
       /*After photo CSS starts*/
-      .sub_titles{
+      .sub_titles {
         font-weight: 700;
         cursor: pointer;
         color: #2f358f;
       }
-      .sub_titles:hover{
+      .sub_titles:hover {
         color: red;
       }
       /*After photo CSS ends*/
-      .main_img:hover{
+      .main_img:hover {
         border-radius: 20px;
-        transition-duration: .5s;
+        transition-duration: 0.5s;
         transform: scale(1.1) rotate(0deg);
         box-shadow: 0 32px 75px rgba(68, 77, 136, 0.2);
-        
+      }
+      .subheadings {
+        font-weight: bold;
+        font-size: 18px;
       }
     </style>
     <div class="gridd_container">
       <div class="sidebar">
-        <a href="/gallary" class="sidebar_a"
+        <a href="/about_hcc" class="sidebar_a"
           >About HCC Why HCCSS Faculty Office Hours Organizational Structure
           Facts And Figures Department Of HCCSS.</a
         >
@@ -125,62 +128,50 @@
           <img src="{% static 'college1.jpg' %}" alt="" class="main_img" />
         </div>
 
-        <p class="long_paragraph">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. At nisi
-          veritatis hic nesciunt eligendi suscipit molestiae porro! Quasi
-          quibusdam, assumenda cum tempora rem dolore. Laborum facilis saepe
-          laboriosam quod quidem fuga quo explicabo ut vel maiores eaque
-          corrupti optio, asperiores repudiandae tenetur quas, natus ratione
-          eveniet neque recusandae. Voluptate distinctio totam ut dolorem amet
-          consequuntur optio quo ex, laborum fugit, unde aliquid. Veniam aperiam
-          tempore molestiae, qui magni necessitatibus deleniti molestias ipsum
-          deserunt quae ipsa reiciendis tempora veritatis unde incidunt.
-          Perspiciatis laboriosam rem nobis sed minima dolor sapiente laudantium
-          quod eum ad amet, ab beatae numquam fuga earum temporibus unde ex
-          fugiat sint eveniet eos, distinctio sunt nesciunt? Nam at eveniet nemo
-          expedita sint voluptate doloremque illum consectetur deleniti, aperiam
-          voluptatibus nulla maiores delectus perspiciatis? Placeat excepturi
-          vero, voluptate numquam fugit necessitatibus molestiae quod
-          consectetur accusantium consequatur optio perferendis, culpa
-          repudiandae inventore dolorum enim eligendi tenetur saepe animi nisi?
-          Explicabo nisi minus placeat veritatis, porro iste. Accusamus minus
-          totam odit quas quasi rem labore assumenda omnis nulla numquam, harum
-          autem ipsum, perferendis necessitatibus voluptate consequatur sint
-          itaque consectetur facilis, molestias sequi? Ipsa sunt expedita
-          molestiae porro nisi ratione, ipsum aliquam harum amet possimus
-          quisquam dolore, rerum id voluptatum ab magni.
-        </p>
-
-        <h4 class="sub_titles">Mission</h4>
-        <p class="short_paragraph">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At veniam
-          excepturi quaerat repudiandae nulla nisi deserunt aliquam magni id
-          cumque, commodi facere illo dolorem. Voluptate reprehenderit numquam
-          natus! Nobis, aliquam.
-        </p>
-
-        <h4 class="sub_titles">Vision</h4>
-        <p class="short_paragraph">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet
-          voluptas alias id ea. Et consequatur saepe placeat ut, omnis,
-          laboriosam blanditiis, eum ipsam tempora impedit officia eius odit
-          sint dolores.
-        </p>
-
-        <h4 class="sub_titles">Philosophy</h4>
-        <p class="short_paragraph">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum
-          ipsa adipisci quia repellendus provident dicta autem, assumenda cum
-          perspiciatis, ratione suscipit porro officiis eveniet doloremque
-          nesciunt perferendis natus, nobis deleniti.
-        </p>
-
-        <h4 class="sub_titles">Values</h4>
-        <p class="short_paragraph">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, rem
-          doloremque hic eius facere odio, earum et consequuntur inventore,
-          aliquam maxime? Est, non. Neque eius tempora eos ut fugiat iste.
-        </p>
+        <ol>
+          <li class="subheadings">Human Resource</li>
+          <p class="long_paragraph">
+            HCC is a top employer in the education, technical, management, and
+            support fields. Many of our graduates plan to work in the education
+            sector, specifically at HCC.
+            <br />
+            Our Human Resource Management Unit, which was created to manage and
+            develop teaching and non-teaching human resources, is always on the
+            lookout for new leaders and talents to join HCC.
+          </p>
+          <li class="subheadings">Reasonable and competitive prices</li>
+          <p class="long_paragraph">
+            Our service fees are significantly lower than those charged by the
+            majority of Nepalese education firms. This is due to the fact that
+            we are an independent education firm that sets our own rates; as a
+            result, our rates are fair and competitive without sacrificing
+            quality in any way.
+          </p>
+          <li class="subheadings">Standing</li>
+          <p class="long_paragraph">
+            Since its inception, HCC has earned a stellar reputation for
+            providing first-rate services and collaborating with prestigious
+            universities and colleges all over the world. As a result, pursuing
+            an education at HCC will increase your chances of landing a better
+            job in the future.
+          </p>
+          <li class="subheadings">Partnership and Collaboration</li>
+          <p class="long_paragraph">
+            Today, HCC has formed alliances with leading organizations in the
+            fields of information technology as well as innovation, business,
+            entrepreneurship, research, and education. Every year, several
+            programs and events are organized in collaboration with HCC or
+            elsewhere for our students. These collaborations have resulted in
+            mutual benefits for HCC and partner organizations in the areas of
+            business development, innovation, and learning.
+          </p>
+          <li class="subheadings">Research and Development</li>
+          <p class="long_paragraph">
+            HCC relies heavily on research and development. We have been working
+            on several initiatives, collaborating on various research projects
+            with various leading partner organizations.
+          </p>
+        </ol>
       </main>
     </div>
     <script></script>
